Version 2.1.0 [06 Apr 2014]
- [TG4 + AerTV] Make better use of pyamf to get video info from brightcove.
- Added 'Watched' status support, RTE/TV3. Turn on in plugin settings, Advanced. 

Version 2.0.18 [30 Mar 2014]
- Add extra debug logging around http requests

Version 2.0.17 [28 Mar 2014]
- Add an "AerTV is now pay only" message for people who don't read change logs

Version 2.0.16 [27 Mar 2014]
- Fix AerTV login issue

Version 2.0.15 [27 Mar 2014]
- Fix RTE 1 and 2 live TV (in RTE section)
- Add more logging around AerTV login, and bypass cache for login http requests

Version 2.0.14 [23 Mar 2014]
- Added resume support
- AerTV is going subscription only and so will only be available to AerTV Plus and Platinum subscribers. Specify your login details in the plugin settings.

Version 2.0.13 [09 Mar 2014]
- Minor internal changes, use internal json instead of simplejson

Version 2.0.12 [05 Mar 2014]
- RTE: Fix not working, change of swfurl
- AerTV: Fix not working over SmartDNS
- AerTV: Added "Show EPG" option. May speed up channel listing when turned off, On by default.

Version 2.0.11 [05 Oct 2013]
- RTE: Fix bug caused by website lying about the number of episodes available for a programme
- RTE: Most Popular fails to load if a list show is no longer available
- TG4: Remove duplicate news category
- TG4: Correctly play multipart programmes
- AerTV: Fix bugs caused by website changes and removal of RTE2 HD

Version 2.0.10
- Fix root menu error in AerTV - due to changes in AerTV's API

Version 2.0.9
- Fix Now and Next times in AerTV. There is now a local time offset option in the plugin settings for people in foreign timezones.
- Fix: TV3 RTMP streams now require verification
- Fix: After a successful download sometimes a download error message appears
- Close progress dialog on download start

Version 2.0.8
- Improve progress dialog

Version 2.0.7
- Moved repository

Version 2.0.6